2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/monkey/monkey.[ch]: change how add row is make
	* src/net/game.c: change how row is add
	* src/net/message-handler.[ch],
	* src/net/monkey-marshal.list:  add new message
	* src/ui/game-2-player.c: change how add row is make

2007-06-30  Laurent Belmonte  <laurent.belmonte@gmail.com>


	* src/monkey/monkey.c,
	* src/monkey/monkey.h,
	* src/net/game.c,
	* src/ui/game-2-player.c,
	* src/ui/game-network-player-manager.c,
	* src/ui/game-network-player-manager.h,
	* src/ui/game-network-player.c,
	* src/ui/game-network-player.h,
	* src/util/clock.c,
	* src/util/clock.h: first step to fix network
	* src/ui/main.c: fix compilation error one more time

2007-06-11  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/game-1-player-manager.c: restart to level
	one when we reach level 99. fixes bug #393915

2007-06-06  Sven Herzberg  <herzi@gnome-de.org>

	* monkey-bubble.desktop.in,
	* src/ui/main.c: don't hard code the icon's extension

2007-06-06  Sven Herzberg  <herzi@gnome-de.org>

	Fixes 354233:

	* pixmaps/Makefile.am: install monkey bubble icon theme-friendly
	* pixmaps/monkey-bubble.png: renamed from monkey-bubble-icon.png
	* src/ui/main.c: updated path to the icon
	* monkey-bubble.desktop.in: updated name of the icon

2007-06-06  Sven Herzberg  <herzi@gnome-de.org>

	Patch by Vincent Untz (Fixes 354232):

	* src/ui/main.c: set the default window icon early
	* src/ui/ui-main.c: don't set the window icon so late

2007-02-19  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* help/da/da.po: Added Danish translation by Peter Bach.
	* help/Makefile.am: Added "sv" to DOC_LINGUAS.

2007-02-04  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added "da" (Danish) to ALL_LINGUAS.

2007-01-27  Kostas Papadimas  <pkst@gnome.org>

	* configure.in: Added 'el' to ALL_LINGUAS.

2007-01-23  David Lodge <dave@cirt.net>

	* help/en_GB/en_GB.po: Added English (British) translation